GERONIMO-6085 JRE ext is still required in same cases, for example, tck, so revert this change
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/branches/3.0@1363233 13f79535-47bb-0310-9956-ffa450edef68